[project]
name = "fastapiproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "passlib>=1.7.4",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.21",
    "scrypt>=0.9.4",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
